--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,9 +13,9 @@ jobs:
           - 2.6
           - 2.7
           # # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
-          # - '3.0'
-          # - 3.1
-          # - head
+          - '3.0'
+          - 3.1
+          - head
     steps:
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
