--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,8 @@ jobs:
           # # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
           - '3.0'
           - 3.1
-          - head
+          - 3.2
+          # - head
     steps:
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
